--- a/cargo-summary.html
+++ b/cargo-summary.html
@@ -52,10 +52,11 @@
   <div id="report">Loading...</div>
 
   <script>
-    const sb = supabase.createClient(
-      'https://xgaforpzjrievucwlgla.supabase.co',
-      'eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9...'
-    );
+  const { createClient } = supabase;
+  const sb = createClient(
+    'https://xgaforpzjrievucwlgla.supabase.co',
+    'YOUR_PUBLIC_ANON_KEY_HERE'
+  );
 
     function pad(text, width) {
       return text.toString().padEnd(width, ' ');
