--- a/cargo-summary.html
+++ b/cargo-summary.html
@@ -51,11 +51,12 @@
 
   <div id="report">Loading...</div>
 
+  <script src="https://cdn.jsdelivr.net/npm/@supabase/supabase-js@2"></script>
   <script>
-  const { createClient } = supabase;
-  const sb = createClient(
+  const { createClient } = window.supabase;
+  const supabase = createClient(
     'https://xgaforpzjrievucwlgla.supabase.co',
-    'YOUR_PUBLIC_ANON_KEY_HERE'
+    'eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJpc3MiOiJzdXBhYmFzZSIsInJlZiI6InhnYWZvcnB6anJpZXZ1Y3dsZ2xhIiwicm9sZSI6ImFub24iLCJpYXQiOjE3NTM0NTEyMDQsImV4cCI6MjA2OTAyNzIwNH0.QPUOtbCPdxrqiWr93yp7FsxznzSyA_Je1oF4D65rzXs'
   );
 
     function pad(text, width) {
