--- a/cargo-summary.html
+++ b/cargo-summary.html
@@ -51,13 +51,28 @@
 
   <div id="report">Loading...</div>
 
-  <script src="https://cdn.jsdelivr.net/npm/@supabase/supabase-js@2"></script>
-  <script>
+<script src="https://cdn.jsdelivr.net/npm/@supabase/supabase-js@2"></script>
+<script>
   const { createClient } = window.supabase;
-  const supabase = createClient(
+  const sb = createClient(
     'https://xgaforpzjrievucwlgla.supabase.co',
-    'eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJpc3MiOiJzdXBhYmFzZSIsInJlZiI6InhnYWZvcnB6anJpZXZ1Y3dsZ2xhIiwicm9sZSI6ImFub24iLCJpYXQiOjE3NTM0NTEyMDQsImV4cCI6MjA2OTAyNzIwNH0.QPUOtbCPdxrqiWr93yp7FsxznzSyA_Je1oF4D65rzXs'
+    'eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9...'
   );
+
+  async function loadReport() {
+    const info = JSON.parse(localStorage.getItem('flightInfo'));
+    if (!info) return;
+
+    const { data, error } = await sb
+      .from("flights")
+      .select("*")
+      .eq("flight_no", info.flight)
+      .eq("flight_date", `${info.year}-${info.month}-${info.day}`);
+    
+    // ...
+  }
+
+  loadReport();
 
     function pad(text, width) {
       return text.toString().padEnd(width, ' ');
